test_regress/t/t_property_unsup.out
%Error-UNSUPPORTED: t/t_property_unsup.v:105:23: Unsupported: #-# (in property expression)
  105 |   assert property ((a #-# b) implies (a #-# b));
      |                       ^~~
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error-UNSUPPORTED: t/t_property_unsup.v:105:41: Unsupported: #-# (in property expression)
  105 |   assert property ((a #-# b) implies (a #-# b));
      |                                         ^~~
%Error-UNSUPPORTED: t/t_property_unsup.v:131:23: Unsupported: #-# (in property expression)
  131 |   assert property ((a #-# b) iff (a #-# b));
      |                       ^~~
%Error-UNSUPPORTED: t/t_property_unsup.v:131:37: Unsupported: #-# (in property expression)
  131 |   assert property ((a #-# b) iff (a #-# b));
      |                                     ^~~
%Error: Exiting due to
